--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-beta.12",
     "cordova-android": "7.1.1",
+    "cordova-ios": "4.5.5",
     "cordova-plugin-advanced-http": "2.0.1",
     "cordova-plugin-android-permissions": "^1.0.0",
     "cordova-plugin-camera": "4.0.3",
@@ -95,7 +96,8 @@
       "cordova-plugin-android-permissions": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
